# opensea

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/power-design/: README.md  SKILL.md
docs/: build-plan-slack.md  build-plan.md  demo-scenario-11-11.md  demo-scenario-paylater.md  demo-scenario-shopee.md  design-spec-slack.md  design-spec.md  judging-alignment.md  overview.md  pitch-script.md  submission-checklist.md
docs/pitch-deck/: README.md
docs/pitch-deck/layout/final/: slide-01.layout.json  slide-02.layout.json  slide-03.layout.json  slide-04.layout.json  slide-05.layout.json  slide-06.layout.json  slide-07.layout.json  slide-08.layout.json  slide-09.layout.json
docs/pitch-deck/output/: artifact-build-manifest.json  per-my-last-email-hackathon-pitch.pptx
docs/pitch-deck/slides/: deck-helpers.mjs  slide-01.mjs  slide-02.mjs  slide-03.mjs  slide-04.mjs  slide-05.mjs  slide-06.mjs  slide-07.mjs  slide-08.mjs  slide-09.mjs
scripts/: build_pitch_deck.sh  run_demo.py  seed_sessions.py
src/pmle/: crux_engine.py  digest.py  manual_flow.py  meeting.py  orchestrator.py  participants.py  schemas.py  slack_app.py  stance_store.py  triage.py
src/pmle/data/: agenda.py  cached_stances.py  personas.py
tests/: test_crux_engine.py  test_digest.py  test_dynamic_flow.py  test_freeform_entry.py  test_manual_flow.py  test_meeting.py  test_orchestrator.py  test_schemas.py  test_slack_brief.py  test_slack_multihuman.py  test_stance_store.py  test_triage.py
