[project]
name = "pmle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.7.0",
    "slack-bolt>=1.21.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
